--- a/source/extensions/omni.isaac.lab_tasks/omni/isaac/lab_tasks/manager_based/classic/cartpole_double/agents/sb3_ppo_cfg.yaml
+++ b/source/extensions/omni.isaac.lab_tasks/omni/isaac/lab_tasks/manager_based/classic/cartpole_double/agents/sb3_ppo_cfg.yaml
@@ -1,21 +1,13 @@
 # Reference: https://github.com/DLR-RM/rl-baselines3-zoo/blob/master/hyperparams/ppo.yml#L32
 seed: 42
 
-n_timesteps: !!float 1e6
+n_timesteps: !!float 2e6
 policy: 'MlpPolicy'
-n_steps: 160
-batch_size: 4096
+n_steps: 4096
+batch_size: 64
 gae_lambda: 0.95
 gamma: 0.99
-n_epochs: 20
-ent_coef: 0.01
-learning_rate: !!float 3e-4
-clip_range: !!float 0.2
-policy_kwargs: "dict(
-                  activation_fn=nn.ELU,
-                  net_arch=[32, 32],
-                  squash_output=False,
-                )"
-vf_coef: 1.0
-max_grad_norm: 1.0
-device: "cuda:0"
+n_epochs: 10
+ent_coef: 0.0
+learning_rate: 2.5e-4
+clip_range: 0.2
