--- a/source/extensions/omni.isaac.lab_tasks/omni/isaac/lab_tasks/manager_based/classic/cartpole_double/agents/rl_games_ppo_cfg.yaml
+++ b/source/extensions/omni.isaac.lab_tasks/omni/isaac/lab_tasks/manager_based/classic/cartpole_double/agents/rl_games_ppo_cfg.yaml
@@ -30,7 +30,7 @@ params:
           val: 0
         fixed_sigma: True
     mlp:
-      units: [32, 32]
+      units: [128, 128, 128, 128]
       activation: elu
       d2rl: False
 
@@ -58,15 +58,15 @@ params:
     normalize_advantage: False
     gamma: 0.99
     tau : 0.95
-    learning_rate: 3e-4
+    learning_rate: 1e-5
     lr_schedule: adaptive
     kl_threshold: 0.008
     score_to_win: 20000
-    max_epochs: 150
+    max_epochs: 1500
     save_best_after: 50
     save_frequency: 25
     grad_norm: 1.0
-    entropy_coef: 0.0
+    entropy_coef: 0.0125
     truncate_grads: True
     e_clip: 0.2
     horizon_length: 16
